--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         Marvel Super Heroes and Villains assembled on a cruise ship.</p>
                 </div>
                 <div class="item">
-                    <h2>Wedding/Hooneymoon</h2>
+                    <h2>Wedding or Hooneymoon</h2>
                     <div>
                         <img src="img/weddings/weddingPNG.png" alt="">
                     </div>
@@ -284,8 +284,9 @@
                 <a href="">
                     <img src="img/footer/if_whatsapp_media_logo_social_2911287.png" target="_blank" alt="">
                 </a>
+                
         </div>
-        <div class="address">PO Box 1019 , Faaa city ,98729, French Polynesia/Tahiti : +689-40-551919</div>
+        <div>PO Box 1019 , Faaa city ,98729, French Polynesia/Tahiti : +689-40-551919</div>
     </footer>
     <script src="js/main.js" type="text/javascript"></script>
     <script src="js/weatherAJAX.js" type="text/javascript"></script>
