--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="form-dipslay-block">Arrival date
                     <span class="required">*</span>
                     <br>
-                    <input type="" id="arrivalDate" class="input-middle-fill" autocomplete='off' />
+                    <input type="date" id="arrivalDate" class="input-middle-fill" autocomplete='off' />
                 </div>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
                 <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
@@ -214,7 +214,7 @@
                 <div>Departure date
                     <span class="required">*</span>
                     <br>
-                    <input type="" id="departureDate" class="input-middle-fill" autocomplete='off' />
+                    <input type="date" id="departureDate" class="input-middle-fill" autocomplete='off' />
                 </div>
                 <script type="text/javascript">
                     new Pikaday({
